--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -750,11 +750,11 @@
     <string name="pt_layout">Rozložení</string>
     <string name="pe_list">Seznam</string>
     <string name="pe_grid">Mřížka</string>
-    <!-- NOT APPLICABLE FOR BOOKS IN CZECH; Just show "On"; it will still be used for other languages. -->
-    <string name="ps_show_titles_reordered_on">Na adrese</string>
-    <!-- NOT APPLICABLE FOR BOOKS IN CZECH; Just show "Off"; it will still be used for other languages. -->
-    <string name="ps_show_titles_reordered_off">Vypnuto</string>
-    <!-- NOT APPLICABLE FOR BOOKS IN CZECH. A single vertical bar character. -->
+    <!-- NOT APPLICABLE FOR BOOKS IN CZECH. -->
+    <string name="ps_show_titles_reordered_on">Platí pouze pro jazyky, které používají články. Příklad v angličtině: „title of a book, The“</string>
+    <!-- NOT APPLICABLE FOR BOOKS IN CZECH. -->
+    <string name="ps_show_titles_reordered_off">Platí pouze pro jazyky, které používají články. Příklad v angličtině: „The title of a book“.</string>
+    <!-- NOT APPLICABLE FOR BOOKS IN CZECH. MUST be set to a single vertical bar character. -->
     <string name="pv_reformat_titles_prefixes">"|"</string>
     <string name="pt_bob_cover_click">Klepnutí na obrázek obálky.</string>
     <string name="pe_bob_cover_click_zoom">Obrázek obálky se přiblíží.</string>
