--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -754,11 +754,11 @@
     <string name="pt_layout">Układ</string>
     <string name="pe_list">Lista</string>
     <string name="pe_grid">Siatka</string>
-    <!-- NOT APPLICABLE FOR BOOKS IN POLISH; Just show "On"; it will still be used for other languages. -->
-    <string name="ps_show_titles_reordered_on">Wł</string>
-    <!-- NOT APPLICABLE FOR BOOKS IN POLISH; Just show "Off"; it will still be used for other languages. -->
-    <string name="ps_show_titles_reordered_off">Wył</string>
-    <!-- NOT APPLICABLE FOR BOOKS IN POLISH. A single vertical bar character. -->
+    <!-- NOT APPLICABLE FOR BOOKS IN POLISH. -->
+    <string name="ps_show_titles_reordered_on">Dotyczy tylko języków, w których używane są przedimki. Przykład w języku angielskim: „title of a book, The”</string>
+    <!-- NOT APPLICABLE FOR BOOKS IN POLISH. -->
+    <string name="ps_show_titles_reordered_off">Dotyczy tylko języków, w których używane są przedimki. Przykład w języku angielskim: „The title of a book”</string>
+    <!-- NOT APPLICABLE FOR BOOKS IN POLISH. MUST be set to a single vertical bar character. -->
     <string name="pv_reformat_titles_prefixes">"|"</string>
     <string name="pt_bob_cover_click">Stuknięcie obrazu okładki.</string>
     <string name="pe_bob_cover_click_zoom">Powiększy obraz okładki.</string>
