--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -710,11 +710,11 @@
     <string name="pt_search_show_shopping_options">Alışveriş menülerini göster</string>
     <string name="lbl_standardize">Standardize et</string>
     <string name="lbl_author_pseudonym_of_X">ta. %1$s</string>
-    <!-- NOT APPLICABLE FOR BOOKS IN TURKISH; Just show "On"; it will still be used for other languages. -->
-    <string name="ps_show_titles_reordered_on">Açık</string>
-    <!-- NOT APPLICABLE FOR BOOKS IN TURKISH; Just show "Off"; it will still be used for other languages. -->
-    <string name="ps_show_titles_reordered_off">Kapalı</string>
-    <!-- NOT APPLICABLE FOR BOOKS IN TURKISH. A single vertical bar character. -->
+    <!-- NOT APPLICABLE FOR BOOKS IN TURKISH. -->
+    <string name="ps_show_titles_reordered_on">Yalnızca makalelerin kullanıldığı diller için geçerlidir. İngilizce örnek: “title of a book, The”.</string>
+    <!-- NOT APPLICABLE FOR BOOKS IN TURKISH. -->
+    <string name="ps_show_titles_reordered_off">Yalnızca makalelerin kullanıldığı diller için geçerlidir. İngilizce örnek: “The title of a book”.</string>
+    <!-- NOT APPLICABLE FOR BOOKS IN TURKISH. MUST be set to a single vertical bar character. -->
     <string name="pv_reformat_titles_prefixes">"|"</string>
     <string name="lbl_titles">Başlıklar</string>
     <string name="lbl_original_title">Orijinal başlık</string>
