--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -589,7 +589,8 @@
     <string name="pv_bob_header_filters">Filtres</string>
     <string name="pv_bob_header_nr_of_books">Montrer le nombre de livres</string>
     <string name="pv_bob_header_style_name">Nom du style</string>
-    <string name="pv_reformat_titles_prefixes">le|Le|la|La|les|Les|un|Un|une|Une</string>
+    <!-- use the default single quote character and NOT the stylized! -->
+    <string name="pv_reformat_titles_prefixes">le|Le|la|La|les|Les|l\'|L\'|un|Un|une|Une</string>
     <string name="size_hidden">Caché</string>
     <string name="size_large">Grand</string>
     <string name="size_medium">Moyen</string>
