--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -586,8 +586,8 @@
     <string name="pt_ui_system_locale">Jazyk systému</string>
     <string name="pt_ui_theme">Téma</string>
     <string name="pt_website_search_order_and_enable">Priorita, povolení a zakázání</string>
-    <string name="ps_show_author_name_family_first">Zobrazte nejprve příjmení.\\ntj. „Čapek, Karel“</string>
-    <string name="ps_show_author_name_given_first">Zobrazení s křestními jmény na prvním místě.\\ntj. „Karel Čapek“</string>
+    <string name="ps_show_author_name_family_first">Zobrazte nejprve příjmení,\ntj. „Čapek, Karel“</string>
+    <string name="ps_show_author_name_given_first">Zobrazení s křestními jmény na prvním místě,\ntj. „Karel Čapek“</string>
     <string name="ps_bob_books_under_multiple_each_author">Pod každým autor</string>
     <string name="ps_bob_books_under_multiple_each_publisher">pod každým vydavatelem</string>
     <string name="ps_bob_books_under_multiple_each_series">Pod každým série</string>
@@ -751,9 +751,9 @@
     <string name="pe_list">Seznam</string>
     <string name="pe_grid">Mřížka</string>
     <!-- NOT APPLICABLE FOR BOOKS IN CZECH. -->
-    <string name="ps_show_titles_reordered_on">Platí pouze pro jazyky, které používají články. Příklad v angličtině: „title of a book, The“</string>
+    <string name="ps_show_titles_reordered_on">Platí pouze pro jazyky, které používají články.\nPříklad v angličtině: „Lord of The Rings, The“</string>
     <!-- NOT APPLICABLE FOR BOOKS IN CZECH. -->
-    <string name="ps_show_titles_reordered_off">Platí pouze pro jazyky, které používají články. Příklad v angličtině: „The title of a book“.</string>
+    <string name="ps_show_titles_reordered_off">Platí pouze pro jazyky, které používají články.\nPříklad v angličtině: „The Lord of The Rings“.</string>
     <!-- NOT APPLICABLE FOR BOOKS IN CZECH. MUST be set to a single vertical bar character. -->
     <string name="pv_reformat_titles_prefixes">"|"</string>
     <string name="pt_bob_cover_click">Klepnutí na obrázek obálky.</string>
@@ -766,6 +766,6 @@
     <string name="lbl_certificate_validity_period">Platnost: %1$s - %2$s</string>
     <string name="lbl_reading">Rozečtené</string>
     <string name="action_edit_defaults">Úprava výchozího nastavení</string>
-    <string name="ps_sort_author_name_given_first">Řazení podle prvních křestních jmen.\\ntj. „Karel Čapek“</string>
-    <string name="ps_sort_author_name_family_first">Řazení podle příjmení na prvním místě.\\ntj. „Čapek, Karel“</string>
+    <string name="ps_sort_author_name_given_first">Řazení podle prvních křestních jmen,\ntj. „Karel Čapek“</string>
+    <string name="ps_sort_author_name_family_first">Řazení podle příjmení na prvním místě,\ntj. „Čapek, Karel“</string>
 </resources>
