--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -504,8 +504,8 @@
     <string name="pt_field_visibility">Visibilidade do campo</string>
     <string name="pt_show_title_reordered">Mostrar títulos como…</string>
     <string name="error_type_not_supported">Tipo não suportado: %1$s …</string>
-    <string name="ps_show_titles_reordered_on">título, O</string>
-    <string name="ps_show_author_name_family_first">Mostrar com o nome de família em primeiro lugar.\\npor exemplo, “de Camões, Luís”</string>
+    <string name="ps_show_titles_reordered_on">Mover um artigo principal para o fim,\npor exemplo, “Senhor dos Anéis, O”</string>
+    <string name="ps_show_author_name_family_first">Mostrar com o nome de família em primeiro lugar,\npor exemplo, “de Camões, Luís”</string>
     <string name="pt_bob_books_under_multiple_authors">Mostrar livros com vários autores</string>
     <string name="lbl_filter">Filtro</string>
     <string name="unknown_author">[Autor desconhecido]</string>
@@ -670,7 +670,7 @@
     <string name="option_bug_report_logfiles">Ficheiros de registo</string>
     <string name="option_bug_report_database_upgrade">Ficheiros de atualização da base de dados</string>
     <string name="lbl_sql_query">Consulta SQL</string>
-    <string name="ps_show_author_name_given_first">Mostrar com os nomes próprios em primeiro lugar.\\npor exemplo, “Luís de Camões”</string>
+    <string name="ps_show_author_name_given_first">Mostrar com os nomes próprios em primeiro lugar,\npor exemplo, “Luís de Camões”</string>
     <string name="pt_bob_books_under_multiple_series">Mostrar livros em várias séries</string>
     <string name="pe_bob_row_menu_button">Mostre sempre um botão.</string>
     <string name="ps_bob_books_under_multiple_primary_series_only">apenas nas suas séries principais</string>
@@ -720,7 +720,7 @@
     <string name="info_backup_successful">Cópia de segurança bem sucedida</string>
     <string name="option_import_books_option_new_only">Apenas novos livros</string>
     <string name="option_header_import_books_option_new_and_updated_cutoff_date">Apenas importar livros modificados desde</string>
-    <string name="ps_show_titles_reordered_off">O título</string>
+    <string name="ps_show_titles_reordered_off">Apresentar como indicado,\npor exemplo, “O Senhor dos Anéis“</string>
     <string name="pv_reformat_titles_prefixes">a|A|um|Um|o|O</string>
     <string name="pt_edit_book_isbn_checks">Verificações de validade do ISBN</string>
     <string name="pt_thumbnails_rotate_auto">Rodar imagens</string>
@@ -778,6 +778,6 @@
     <string name="lbl_certificate_validity_period">Validade: %1$s - %2$s</string>
     <string name="lbl_reading">A ler</string>
     <string name="action_edit_defaults">Editar definições predefinidas</string>
-    <string name="ps_sort_author_name_given_first">Ordenar primeiro pelos nomes próprios.\\npor exemplo, “Luís de Camões”</string>
-    <string name="ps_sort_author_name_family_first">Ordenar primeiro pelo apelido.\\npor exemplo, “de Camões, Luís”</string>
+    <string name="ps_sort_author_name_given_first">Ordenar primeiro pelos nomes próprios,\npor exemplo, “Luís de Camões”</string>
+    <string name="ps_sort_author_name_family_first">Ordenar primeiro pelo apelido,\npor exemplo, “de Camões, Luís”</string>
 </resources>
