--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -587,8 +587,8 @@
     <string name="pt_ui_system_locale">Язык системы</string>
     <string name="pt_ui_theme">тема</string>
     <string name="pt_website_search_order_and_enable">Важные разговоры, включить и отключить</string>
-    <string name="ps_show_author_name_family_first">Отображать сначала фамилии.\\nнапример «Достоевский, Фёдор»</string>
-    <string name="ps_show_author_name_given_first">Отобразить сначала фамилии.\\nнапример «Фёдор Достоевский»</string>
+    <string name="ps_show_author_name_family_first">Отображать сначала фамилии,\nнапример «Достоевский, Фёдор»</string>
+    <string name="ps_show_author_name_given_first">Отобразить сначала фамилии,\nнапример «Фёдор Достоевский»</string>
     <string name="ps_bob_books_under_multiple_each_author">Под каждым автор</string>
     <string name="ps_bob_books_under_multiple_each_publisher">под каждым издателем</string>
     <string name="ps_bob_books_under_multiple_each_series">Под каждым серии</string>
@@ -752,9 +752,9 @@
     <string name="pe_list">Список</string>
     <string name="pe_grid">Сетка</string>
     <!-- NOT APPLICABLE FOR BOOKS IN RUSSIAN. -->
-    <string name="ps_show_titles_reordered_on">Применяется только к языкам, в которых используются артикли. Английский пример: «title of a book, The».</string>
+    <string name="ps_show_titles_reordered_on">Применяется только к языкам, в которых используются артикли.\nАнглийский пример: «Lord of The Rings, The».</string>
     <!-- NOT APPLICABLE FOR BOOKS IN RUSSIAN. -->
-    <string name="ps_show_titles_reordered_off">Применяется только к языкам, в которых используются артикли. Английский пример: «The title of a book».</string>
+    <string name="ps_show_titles_reordered_off">Применяется только к языкам, в которых используются артикли.\nАнглийский пример: «The Lord of The Rings».</string>
     <!-- NOT APPLICABLE FOR BOOKS IN RUSSIAN. MUST be set to a single vertical bar character. -->
     <string name="pv_reformat_titles_prefixes">"|"</string>
     <string name="pt_bob_cover_click">Нажатие на изображение обложки.</string>
@@ -767,6 +767,6 @@
     <string name="lbl_certificate_validity_period">Срок действия: %1$s - %2$s</string>
     <string name="lbl_reading">Читаю</string>
     <string name="action_edit_defaults">Редактирование настроек по умолчанию</string>
-    <string name="ps_sort_author_name_given_first">Отсортировать по фамилиям.\\nнапример «Фёдор Достоевский»</string>
-    <string name="ps_sort_author_name_family_first">Сортировка по фамилии в первую очередь.\\nнапример «Достоевский, Фёдор»</string>
+    <string name="ps_sort_author_name_given_first">Отсортировать по фамилиям,\nнапример «Фёдор Достоевский»</string>
+    <string name="ps_sort_author_name_family_first">Сортировка по фамилии в первую очередь,\nнапример «Достоевский, Фёдор»</string>
 </resources>
